--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,12 +13,16 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-root.xml
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
 
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
 ####################################################
 # -- mySQL-DB -- #
-spring.datasource.url=jdbc:mysql://localhost:3306/autoanalytics
-spring.datasource.username=wael
-spring.datasource.password=wael
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/autoanalytics
+#spring.datasource.username='your_username'
+#spring.datasource.password='your_password'
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 
 
@@ -29,7 +33,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 # -- Spring Batch -- #
 # Prevent jobs to be executed at startup
