--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,14 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    #- name: Build with Maven
+     # run: mvn -B package --file pom.xml
+
+    - name: Run tests
+      run: mvn clean test
+      
+    - name: Build application (don't run)
+      run: mvn clean package -DskipTests
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     #- name: Update dependency graph
